ready for vercel

--- a/config/config.env
+++ b/config/config.env
@@ -5,10 +5,10 @@ DB_URL="mongodb+srv://tushar915:tushar1292@cluster0.ihjuf05.mongodb.net/GsonsInd
 JWT_EXPIRE = 5d
 COOKIE_EXPIRE= 5
 
-JWT_SCREET_KEY=IAMTHEALLMIGHTY
+JWT_SECRET_KEY=IAMTHEALLMIGHTY
 
-SMPT_PASSWORD="heyamar@1234567"
-SMPT_MAIL="amarjeetsingh94620@gmail.com"
+SMPT_PASSWORD="gvss yckw kawp fvma"
+SMPT_MAIL="vijaytushar915@gmail.com"
 SMPT_SERVICE="gmail"
 
 SMPT_HOST="smtp.gmail.com" 
